newProject4/force-app/main/default/objects/SampleObject__c/fields/Min_Cost_Of_Child__c.field-meta.xml
<CustomField>
    <fullName>Min_Cost_Of_Child__c</fullName>
    <label>Min Cost Of Child</label>
    <summarizedField>SampleObject1__c.Sample_Cost1__c</summarizedField>
    <summaryForeignKey>SampleObject1__c.SampleObject__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>