newProject4/force-app/main/default/objects/SampleObject__c/fields/Sample_Obj_Number__c.field-meta.xml
<CustomField>
    <fullName>Sample_Obj_Number__c</fullName>
    <displayFormat>S-{000000}</displayFormat>
    <label>Sample_Obj_Number</label>
    <type>AutoNumber</type>
</CustomField>