newProject4/force-app/main/default/objects/SampleObject__c/fields/Total_Cost_Of_Child__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Of_Child__c</fullName>
    <label>Total_Cost_Of_Child</label>
    <summarizedField>SampleObject1__c.Sample_Cost1__c</summarizedField>
    <summaryForeignKey>SampleObject1__c.SampleObject__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>