newProject4/force-app/main/default/objects/SampleObject__c/fields/Total_Cost_On_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_On_Criteria__c</fullName>
    <label>Total_Cost_On_Criteria</label>
    <summarizedField>SampleObject1__c.Sample_Cost1__c</summarizedField>
    <summaryFilterItems>
        <field>SampleObject1__c.Sample_Cost1__c</field>
        <operation>greaterThan</operation>
        <value>150</value>
    </summaryFilterItems>
    <summaryForeignKey>SampleObject1__c.SampleObject__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>