newProject4/force-app/main/default/objects/SampleObject__c/recordTypes/Record_Type1.recordType-meta.xml
<RecordType>
    <fullName>Record_Type1</fullName>
    <active>true</active>
    <label>Record_Type1</label>
</RecordType>